k8s/db_connect_helm/build/apps_v1_deployment_dev-spring-spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-spring-spring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-spring-deployment
  template:
    metadata:
      labels:
        app: spring-spring-deployment
    spec:
      containers:
      - env:
        - name: POSTGRES_URI
          valueFrom:
            secretKeyRef:
              key: postgres-uri
              name: dev-spring-spring-secret
        image: docker.io/mkaram007/my-tools:db_connect
        imagePullPolicy: Always
        name: spring
        ports:
        - containerPort: 8080
          name: spring
        volumeMounts:
        - mountPath: /workspace/config/
          name: spring-properties
      imagePullSecrets:
      - name: regcred
      volumes:
      - configMap:
          name: dev-spring-properties
        name: spring-properties
