k8s/db_connect_helm/build/v1_service_dev-database-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: database-database-service
  name: dev-database-database-service
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: database-database-deployment
  type: NodePort
