k8s/db_connect_helm/build/v1_service_dev-spring-spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: spring
  name: dev-spring-spring-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-spring-deployment
