k8s/db_connect_helm/build/networking.k8s.io_v1_ingress_dev-spring-spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-spring-spring-ingress
spec:
  rules:
  - host: spring.minikube.local
    http:
      paths:
      - backend:
          service:
            name: dev-spring-spring-service
            port:
              number: 8080
        path: /
        pathType: Prefix
